  13. Default XP chart (lists.ini) modified to make low levels faster, and level off around 5k per level.
  14. WanderHomeLater property expanded into more usefulness -- about 8 new parameters added.
  15. FireBuilding now gained by all classes at level 1
  16. QUESTS command, used by an admin, can target other players to get info about them.  See AHELP QUESTS for more info on this.
   *. finish collision management, against space ships at least.
   *. interacting items of diff tech level might damage each other
   *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
   *. entry systems for ships (default entry key card, voice code, identifying scanner)
   *. work on automatic component values
   *. make sure shopkeeper item techlevels watch the master tech level
   *. make ship sensor systems
   *. make tractor beam system -- esp important for pirates!
   *. make ship shield systems murder motel again -- some good against phasers, some torpedos, some lasers
   *. make ship phaser, laser systems murder motel again
   *. make ship torpedo launchers and torpedo containers
   *. make ship impulse and warp engines
   *. make ship dampeners
   *. damaged systems should sometimes require random parts, from particular manufacturers, that repair respects
   *. finish main ship software for controlling all this stuff
   *. add electronics to guides, how to make a ship, how to build space, etc, details about tech
   *. add electronics to MG
   *. add spaceobject stuff to MG
   *. add spaceobject mapper system to MG
   *. keep reviewing and updating the GameOverview.html doc
   *. --- end of tech ---
   *. retest private libs, private dbtables, private classes, private area objects, private players
   *. OLC for players?  Play with PennMush more. Port 4201
# Build 5.8.2 Release 6/13/2014
   0. Database Schema Updated! Run DBUpgrade, OR manually alter table CMCHCL to add CMCLSTS (see appropriate schema file)