@@ -1510,6 +1510,17 @@ Food - eat \n\r\
 Drink - drink \n\r\
 Armor - wear 
 
+PROP_UNCAMPABLE=\
+Property   : Prop_Uncampable\n\r\
+Targets    : Items, Rooms, Mobs\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+If this mob, room, or item is otherwise rejuvinating, this property will prevent the \
+rejuvination from actually occurring if PCs are in the same room as the rejuvination, \
+but an admin is not present.
+
+
 PROP_USESPELLCAST=\
 Property   : Prop_UseSpellCast\n\r\
 Targets    : Items\n\r\
